fix: fail closed on registry adapter validation