@@ -11,15 +11,26 @@ import io.github.xreatlabz.revprac.domain.kits.KitPotionEffect;
 import io.github.xreatlabz.revprac.domain.kits.KitRules;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Base64;
 import java.util.Arrays;
 import java.util.List;
+import org.bukkit.Bukkit;
+import org.bukkit.Material;
+import org.bukkit.inventory.ItemStack;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
+import org.mockbukkit.mockbukkit.MockBukkit;
 
 final class PaperKitRegistryFilesTest {
 
     @TempDir
     Path tempDir;
+
+    @AfterEach
+    void tearDown() {
+        MockBukkit.unmock();
+    }
 
     @Test
     void missingRegistryFileLoadsAsEmptyListAndCanBeSaved() throws Exception {
@@ -37,6 +48,14 @@ final class PaperKitRegistryFilesTest {
 
     @Test
     void validKitYamlLoadsIntoKitDefinitions() throws Exception {
+        String sword = encoded(stack(Material.DIAMOND_SWORD, 1));
+        String apples = encoded(stack(Material.GOLDEN_APPLE, 3));
+        String boots = encoded(stack(Material.DIAMOND_BOOTS, 1));
+        String leggings = encoded(stack(Material.DIAMOND_LEGGINGS, 1));
+        String chestplate = encoded(stack(Material.DIAMOND_CHESTPLATE, 1));
+        String helmet = encoded(stack(Material.DIAMOND_HELMET, 1));
+        String totem = encoded(stack(Material.TOTEM_OF_UNDYING, 1));
+
         Files.writeString(
                 tempDir.resolve("kits.yml"),
                 """
@@ -47,16 +66,16 @@ final class PaperKitRegistryFilesTest {
                     inventory:
                       selected-slot: 1
                       storage:
-                        - c3RvcmFnZS0w
+                        - "%s"
                         - null
-                        - c3RvcmFnZS0y
+                        - "%s"
                       armor:
-                        - YXJtb3ItMA==
-                        - YXJtb3ItMQ==
-                        - YXJtb3ItMg==
-                        - YXJtb3ItMw==
+                        - "%s"
+                        - "%s"
+                        - "%s"
+                        - "%s"
                       extra:
-                        - ZXh0cmEtMA==
+                        - "%s"
                     potion-effects:
                       - effect: minecraft:speed
                         duration-ticks: 1200
@@ -69,7 +88,7 @@ final class PaperKitRegistryFilesTest {
                       allow-hunger: false
                       allow-natural-regeneration: true
                       ranked: false
-                """);
+                """.formatted(sword, apples, boots, leggings, chestplate, helmet, totem));
 
         PaperKitRegistryFiles files = new PaperKitRegistryFiles(tempDir);
 
@@ -80,9 +99,9 @@ final class PaperKitRegistryFilesTest {
                         new KitId("nodebuff"),
                         "NoDebuff",
                         new KitInventory(
-                                Arrays.asList("c3RvcmFnZS0w", null, "c3RvcmFnZS0y"),
-                                List.of("YXJtb3ItMA==", "YXJtb3ItMQ==", "YXJtb3ItMg==", "YXJtb3ItMw=="),
-                                List.of("ZXh0cmEtMA=="),
+                                Arrays.asList(sword, null, apples),
+                                List.of(boots, leggings, chestplate, helmet),
+                                List.of(totem),
                                 1),
                         List.of(new KitPotionEffect("minecraft:speed", 1200, 1, false, true, true)),
                         new KitRules(false, false, true, false),
@@ -113,7 +132,7 @@ final class PaperKitRegistryFilesTest {
                     enabled: true
                     inventory:
                       selected-slot: 0
-                      storage: [a]
+                      storage: ["%s"]
                       armor: []
                       extra: []
                     potion-effects: []
@@ -127,7 +146,7 @@ final class PaperKitRegistryFilesTest {
                     enabled: false
                     inventory:
                       selected-slot: 0
-                      storage: [b]
+                      storage: ["%s"]
                       armor: []
                       extra: []
                     potion-effects: []
@@ -136,7 +155,7 @@ final class PaperKitRegistryFilesTest {
                       allow-hunger: true
                       allow-natural-regeneration: false
                       ranked: true
-                """);
+                """.formatted(encoded(stack(Material.STONE_SWORD, 1)), encoded(stack(Material.BOW, 1))));
 
         PaperKitRegistryFiles files = new PaperKitRegistryFiles(tempDir);
 
@@ -146,6 +165,7 @@ final class PaperKitRegistryFilesTest {
 
     @Test
     void missingRequiredFieldsIncludeYamlPathInExceptionMessage() throws Exception {
+        String sword = encoded(stack(Material.DIAMOND_SWORD, 1));
         Files.writeString(
                 tempDir.resolve("kits.yml"),
                 """
@@ -154,7 +174,7 @@ final class PaperKitRegistryFilesTest {
                     display-name: NoDebuff
                     enabled: true
                     inventory:
-                      storage: [a]
+                      storage: ["%s"]
                       armor: []
                       extra: []
                     potion-effects: []
@@ -163,7 +183,7 @@ final class PaperKitRegistryFilesTest {
                       allow-hunger: false
                       allow-natural-regeneration: true
                       ranked: false
-                """);
+                """.formatted(sword));
 
         PaperKitRegistryFiles files = new PaperKitRegistryFiles(tempDir);
 
@@ -173,6 +193,8 @@ final class PaperKitRegistryFilesTest {
 
     @Test
     void invalidYamlContentDoesNotPublishPartialDefinitions() throws Exception {
+        String sword = encoded(stack(Material.DIAMOND_SWORD, 1));
+        String bow = encoded(stack(Material.BOW, 1));
         Files.writeString(
                 tempDir.resolve("kits.yml"),
                 """
@@ -182,7 +204,7 @@ final class PaperKitRegistryFilesTest {
                     enabled: true
                     inventory:
                       selected-slot: 0
-                      storage: [a, null, b]
+                      storage: ["%s", null, "%s"]
                       armor: []
                       extra: []
                     potion-effects: []
@@ -193,7 +215,7 @@ final class PaperKitRegistryFilesTest {
                       ranked: false
                   - id: soup
                     enabled: true
-                """);
+                """.formatted(sword, bow));
 
         PaperKitRegistryFiles files = new PaperKitRegistryFiles(tempDir);
 
@@ -201,17 +223,127 @@ final class PaperKitRegistryFilesTest {
         assertTrue(exception.getMessage().contains("kits[1].display-name"));
     }
 
+    @Test
+    void invalidItemPayloadFailsWithYamlPath() throws Exception {
+        Files.writeString(
+                tempDir.resolve("kits.yml"),
+                """
+                kits:
+                  - id: nodebuff
+                    display-name: NoDebuff
+                    enabled: true
+                    inventory:
+                      selected-slot: 0
+                      storage: ["AQIDBA=="]
+                      armor: []
+                      extra: []
+                    potion-effects: []
+                    rules:
+                      allow-building: false
+                      allow-hunger: false
+                      allow-natural-regeneration: true
+                      ranked: false
+                """);
+
+        PaperKitRegistryFiles files = new PaperKitRegistryFiles(tempDir);
+
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, files::load);
+        assertTrue(exception.getMessage().contains("kits[0].inventory.storage[0]"));
+    }
+
+    @Test
+    void unknownEffectKeyFailsWithYamlPath() throws Exception {
+        String sword = encoded(stack(Material.DIAMOND_SWORD, 1));
+        Files.writeString(
+                tempDir.resolve("kits.yml"),
+                """
+                kits:
+                  - id: nodebuff
+                    display-name: NoDebuff
+                    enabled: true
+                    inventory:
+                      selected-slot: 0
+                      storage: ["%s"]
+                      armor: []
+                      extra: []
+                    potion-effects:
+                      - effect: minecraft:not_real
+                        duration-ticks: 1200
+                        amplifier: 1
+                        ambient: false
+                        particles: true
+                        icon: true
+                    rules:
+                      allow-building: false
+                      allow-hunger: false
+                      allow-natural-regeneration: true
+                      ranked: false
+                """.formatted(sword));
+
+        PaperKitRegistryFiles files = new PaperKitRegistryFiles(tempDir);
+
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, files::load);
+        assertTrue(exception.getMessage().contains("kits[0].potion-effects[0].effect"));
+    }
+
+    @Test
+    void decimalSelectedSlotFailsWithFieldPath() throws Exception {
+        String sword = encoded(stack(Material.DIAMOND_SWORD, 1));
+        Files.writeString(
+                tempDir.resolve("kits.yml"),
+                """
+                kits:
+                  - id: nodebuff
+                    display-name: NoDebuff
+                    enabled: true
+                    inventory:
+                      selected-slot: 1.5
+                      storage: ["%s"]
+                      armor: []
+                      extra: []
+                    potion-effects: []
+                    rules:
+                      allow-building: false
+                      allow-hunger: false
+                      allow-natural-regeneration: true
+                      ranked: false
+                """.formatted(sword));
+
+        PaperKitRegistryFiles files = new PaperKitRegistryFiles(tempDir);
+
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, files::load);
+        assertTrue(exception.getMessage().contains("kits[0].inventory.selected-slot"));
+    }
+
     private static KitDefinition kit(String id, String displayName) {
         return new KitDefinition(
                 new KitId(id),
                 displayName,
                 new KitInventory(
-                        Arrays.asList("storage-" + id, null, "rod-" + id),
-                        List.of("helmet-" + id, "chestplate-" + id, "leggings-" + id, "boots-" + id),
-                        List.of("totem-" + id),
+                        Arrays.asList(
+                                encoded(stack(Material.IRON_SWORD, 1)),
+                                null,
+                                encoded(stack(Material.FISHING_ROD, 1))),
+                        List.of(
+                                encoded(stack(Material.IRON_BOOTS, 1)),
+                                encoded(stack(Material.IRON_LEGGINGS, 1)),
+                                encoded(stack(Material.IRON_CHESTPLATE, 1)),
+                                encoded(stack(Material.IRON_HELMET, 1))),
+                        List.of(encoded(stack(Material.TOTEM_OF_UNDYING, 1))),
                         2),
                 List.of(new KitPotionEffect("minecraft:speed", 600, 1, false, true, true)),
                 new KitRules(false, false, true, false),
                 true);
+    }
+
+    private static ItemStack stack(Material material, int amount) {
+        if (Bukkit.getServer() == null) {
+            MockBukkit.mock();
+        }
+        return new ItemStack(material, amount);
+    }
+
+    private static String encoded(ItemStack itemStack) {
+        return Base64.getEncoder().encodeToString(itemStack.serializeAsBytes());
     }
 }
